[gd_scene load_steps=4 format=3 uid="uid://bimm03dvqo71u"]

[ext_resource type="Script" uid="uid://dnritvjjs18lf" path="res://rapier.gd" id="1_122gh"]
[ext_resource type="Texture2D" uid="uid://b262sjw842afl" path="res://Screenshot 2025-11-24 121616.png" id="2_hdb2x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_03td6"]
radius = 41.0
height = 350.0

[node name="Area2D" type="Area2D"]
show_behind_parent = true
scale = Vector2(0.4, 0.4)
script = ExtResource("1_122gh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -235)
shape = SubResource("CapsuleShape2D_03td6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-13, -402)
texture = ExtResource("2_hdb2x")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="weapon_attack" from="." to="." method="_on_weapon_attack"]
[connection signal="weapon_parry" from="." to="." method="_on_weapon_parry"]
